# HeavyFoot

./: AGENTS.md  Cargo.toml  LICENSE  PROJECT.md  README.md
.github/workflows/: rust.yml
crates/can-core/: Cargo.toml
crates/can-core/src/: lib.rs
crates/device-core/: Cargo.toml
crates/device-core/src/: lib.rs
crates/fuel-model/: Cargo.toml
crates/fuel-model/src/: lib.rs
crates/obd-core/: Cargo.toml
crates/obd-core/src/: lib.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: lib.rs  main.rs
docs/: ai-workflow.md  can-interface.md  decisions.md  firmware-architecture.md  hardware-architecture.md  hardware-pinout.md  power-subsystem.md  power-topology.md  protocol-notes.md  runtime-architecture.md
docs/adr/: ADR-001-direct-can.md  ADR-002-esp32-module.md  ADR-003-host-testable-core.md  ADR-004-input-protection.md  ADR-005-no_std-compatible-crates.md
