[package]
name = "simulator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
can-core = { path = "../can-core" }
device-core = { path = "../device-core" }
fuel-model = { path = "../fuel-model" }
obd-core = { path = "../obd-core" }
